<resources>
    <string name="app_name">Verbum</string>
    <string name="Jugar">Jugar</string>
    <string name="tutorial">tutorial</string>
    <string name="sintaxis">Sintaxis</string>
    <string name="palabra">Palabra</string>
    <string name="pregunta">"pregunta recibida "</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="comprobar">Comprobar</string>
    <string name="EscaleraInfinita">Escalera infinita</string>
    <string name="QueSoy">¿Qué soy?</string>
    <string name="CajaDeHerramientas">Caja de herramientas</string>
    <string name="CajaHerramienta">Caja herramientas</string>
    <string name="Comprobar">Comprobar</string>
    <string name="Records">Mejores Puntuaciones</string>
    <string name="Letras">Letras ganadas</string>
    <string name="Ninguna">Ninguna </string>
    <string name="SinRegistros">No hay registros todavía ¡Comienza a jugar para ver tus progresos!</string>
    <string name="ninguna">Ninguna de las anteriores</string>
    <string name="Sustantivo">Sustantivo</string>
    <string name="Adjetivo">Adjetivo</string>
    <string name="Articulos">Artículo</string>
    <string name="Adverbios">Adverbio</string>
    <string name="Verbo">Verbo</string>
    <string name="Pronombre">Pronombre</string>
    <string name="conjuncion">Conjunción</string>
    <string name="Interjeccion">Interjección</string>
    <string name="Preposicion">Preposición</string>
    <string name="Facil">Fácil</string>
    <string name="Medio">Medio</string>
    <string name="Dificil">Difícil</string>
    <string name="record">Record</string>
    <string name="DiccionarioRae">Diccionario RAE</string>
    <string name="SubirRegistro">Subir puntuación</string>
    <string name="Nick">Nick</string>
    <string name="ModoDeJuego">Modo de juego</string>
    <string name="dificultad">Dificultad</string>
    <string name="buscar">Buscar</string>
    <string name="modoJuegoVacio">El campo modo de juego no puede estar vacío</string>
    <string name="dificultadVacio">El campo dificultad no puede estar vacío</string>
    <string name="title_activity_tutorial">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tutorialEscalera">En este modo de juego deberás clasificar las palabras que se muestran por pantalla eligiendo entre una o varias opciones (dependiendo de la dificultad) para conseguir el mayor número posible de letras. El juego terminará cuando te equivoques, es el modo  de juego más difícil y en él se pondrá a prueba todos tus conocimientos de la sintaxis. ¡Buena suerte!</string>
    <string name="medioDidifil">Medio/Difícil</string>
    <string name="escaleraTutorialSubrayado"><![CDATA[<u>Escalera infinita</u>]]></string>
    <string name="QueSoyTutorialSubrayado"><![CDATA[<u>¿ Qué soy ?</u>]]></string>
    <string name="cajaHerramientasTutorialSubrayado"><![CDATA[<u>Caja de herramientas</u>]]></string>
    <string name="clasificacion">Clasificación</string>
    <string name="pregutantasRespuestas">Preguntas</string>
    <string name="tutorialQueSoy">En este modo de juego deberás responder una serie de preguntas sobre una palabra aleatoria para conseguir el mayor número de letras posibles. Una vez respondidas todas, deberás clasificar la palabra eligiendo todas las funciones que puede cumplir, este es el modo de juego más sencillo. ¡Buenas suerte!</string>
    <string name="tutorialCajaHerramientas">En este modo de juego deberás elegir entre cinco opciones que cumplan la pregunta dada sin que se te acabe el tiempo, donde una o varias serán las correctas. El tiempo que dispones para responder se irá reduciendo a medida que aumentes la dificultad ¡Buenas suerte!</string>
    <string name="todasLasDificultades">Todas las dificultades</string>
    <string name="Nombre">Jugador</string>
    <string name="Puntuacion">Puntuación</string>
    <string name="Semantica">Semántica</string>
    <string name="controlDeSonido">Control de música</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aclaraciones">1. Debes tener en cuenta el plural de las palabras que lo admitan (todas están en singular).</string>
    <string name="aclaraciones3">2. No marcar como adverbio aquellas palabras que necesites añadirles un sufijo para que lo sean.</string>
    <string name="continuar">Continuar</string>
    <string name="verVideo">Ver video</string>
    <string name="informacionImportante">Información importante</string>
    <string name="recorduno">Vaya, respuesta incorrecta. Has conseguido</string>
    <string name="recordtres">. Si quieres revisar qué funciones puede tener, pulsa sobre el diccionario.</string>
    <string name="recordos">letras.</string>
    <string name="recordcuatro">letras y la última palabra era </string>
    <string name="recordcinco">¡Felicidades! Has acertado la palabra  </string>
    <string name="recordseis">¡Casi! Has fallado la palabra  </string>
    <string name="recordsiete">Oh vaya... Parece que no has conseguido ninguna letra.  </string>
    <string name="recordocho">Oh vaya... Parece que  has conseguido   </string>

    <string name="volverMenu">Volver al menú</string>
    <string name="x2">+20</string>
    <string name="x5">+30</string>
    <string name="x10">+50</string>
    <string name="cero">0</string>
    <string name="error">"El nick debe ser de 4 a 17 caracteres"</string>
    <string name="upload">"Puntuación subida"</string>
    <string name="verdadero">verdadero</string>
    <string name="falso">falso</string>
    <string name="introQueSoy">La palabra: </string>
    <string name="morfologia">Morfología</string>
    <string name="falloAnalisis">Ups... Parece que has fallado.  ¡No te desanimes y vuelve a probar !</string>
    <string name="aciertoAnalisis">¡Felicidades has hecho correctamente el análisis!</string>
    <string name="aciertoAnalisis2">"Prueba otra vez y sube la dificicultad. "</string>
    <string name="predicado1">Predicado 1:</string>
    <string name="Predicado2">Predicado 2:</string>


</resources>
