<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantallajuegos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papiro_fondo"
    tools:context=".ui.pantallajuegos.modoJuegos.escaleraInfinita.PantallaEscaleraInfinitaFragment">

    <TextView
        android:id="@+id/TV_palabraInfinita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:padding="10dp"
        android:text="@string/palabra"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_LetrasConseguidasEscalera"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/pieza"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/cero"
        android:textAllCaps="true"
        android:textColor="@color/marron"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_palabraInfinita">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BT_Sustantivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:padding="15dp"
                android:text="@string/Sustantivo"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BT_Adjetivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:text="@string/Adjetivo"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BT_Pronombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:padding="10dp"
                android:text="@string/Pronombre"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BT_Adverbios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:text="@string/Adverbios"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BT_verbos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:text="@string/Verbo"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BT_Preposicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:padding="15dp"
                android:text="@string/Preposicion"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BT_Conjuncion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:text="@string/conjuncion"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BT_Interjencion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:padding="15dp"
                android:text="@string/Interjeccion"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BT_Articulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pieza"
                android:text="@string/Articulos"
                android:textColor="@color/marron"
                android:textSize="12sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <ProgressBar
        android:id="@+id/PB_multiplicadorLetras"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:progress="0"
        app:layout_constraintEnd_toStartOf="@+id/TV_LetrasConseguidasEscalera"
        app:layout_constraintStart_toStartOf="@+id/TV_palabraInfinita"
        app:layout_constraintTop_toBottomOf="@+id/TV_palabraInfinita" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/x2"
        app:layout_constraintStart_toStartOf="@+id/PB_multiplicadorLetras"
        app:layout_constraintTop_toBottomOf="@+id/PB_multiplicadorLetras" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x5"
        app:layout_constraintEnd_toEndOf="@+id/PB_multiplicadorLetras"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/PB_multiplicadorLetras" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x10"
        app:layout_constraintEnd_toEndOf="@+id/PB_multiplicadorLetras"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/PB_multiplicadorLetras" />

</androidx.constraintlayout.widget.ConstraintLayout>
