<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <group
        android:background="@drawable/papiro_fondo">
        <item
            android:id="@+id/facilMenu"
            android:background="@drawable/papiro_fondo"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:title="@string/Facil"
            android:visible="true">

        </item>
        <item
            android:id="@+id/medioMenu"
            android:background="@drawable/papiro_fondo"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:title="@string/Medio"

            android:visible="true">

        </item>
        <item
            android:id="@+id/dificilMenu"
            android:background="@drawable/papiro_fondo"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:title="@string/Dificil"
            android:visible="true">

        </item>

    </group>
</menu>